--- a/04-fragments/src/components/Container.module.css
+++ b/04-fragments/src/components/Container.module.css
@@ -1,2 +1,8 @@
 .container {
+  border: 1px solid black;
+  margin: 15px;
+  width: 50%;
+  border-radius: 5px;
+  padding: 10px;
+  min-width: 200px;
 }
