--- a/Projects/SocialMedia/src/App.css
+++ b/Projects/SocialMedia/src/App.css
@@ -9,3 +9,16 @@
 .sidebar {
   min-height: 650px;
 }
+
+.post-card {
+  margin: 20px 50px;
+}
+
+.hashtag {
+  margin: 0 3px;
+}
+
+.reactions {
+  width: 100%;
+  margin: 15px 0 0 0;
+}
